attempt alternative fix to navbar overflow

--- a/plex_mobile.css
+++ b/plex_mobile.css
@@ -120,9 +120,7 @@ div[class*="NavBar-buttonSeparator-"] {
   }
   [class*="NavBar-container-"] {
     height: 40px !important;
-  }
-  [class*="NavBar-container-"]:focus-within div[class*="NavBar-right-"] {
-    display: none;
+    max-width: 100vw;
   }
   [class*="DashboardPage-dashboardPageContent-"] {
     padding: 0 20px 20px;
